--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "12.3.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "eslint": "9.1.1",
-    "eslint-config-next": "14.2.3"
-  }
+  },
+  "browserslist": [
+    ">0.05%",
+    "ie 6-8"
+  ]
 }
