feat: 添加 es5兼容（大概有点东西）

--- a/.babelrc
+++ b/.babelrc
@@ -5,10 +5,7 @@
             {
                 "preset-env": {
                     "useBuiltIns": "entry",
-                    "corejs": { "version": 3  },
-                    "targets": {
-                        "ie": "9"
-                    }
+                    "corejs": { "version": 3  }
                 },
                 "transform-runtime": {},
                 "styled-jsx": {},
