--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,7 @@
             {
                 "preset-env": {
                     "useBuiltIns": "entry",
-                    "corejs": { "version": 3  }
+                    "corejs": { "version": 3, "proposals": true  }
                 },
                 "transform-runtime": {},
                 "styled-jsx": {},
