--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
+    "nodemon": "^3.1.0",
     "typescript": "5.4.5"
   },
   "browserslist": [
