feat: 添加 es 校验 & 自定义 postcss & 移除多余的 core-js 包

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next", "plugin:compat/recommended"],
+  "settings": {
+    "polyfills": [
+      "fetch",
+      "object.assign",
+      "string.trimStart",
+      "string.trimEnd",
+      "symbol.description",
+      "array.flat",
+      "array.flatMap",
+      "promise.finally",
+      "process"
+    ]
+  },
+  "plugins": ["compat"]
 }
