--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   "devDependencies": {
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "12.3.4",
+    "eslint-plugin-compat": "^4.2.0",
     "nodemon": "^3.1.0",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.5.11",
     "typescript": "5.4.5"
   },
   "browserslist": [
