--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "yarn style-lint && next lint",
+    "style-lint": "yarn stylelint \"./styles\"",
     "postinstall": "patch-package"
   },
   "dependencies": {
