--- a/.github/workflows/nextjs.yaml
+++ b/.github/workflows/nextjs.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v3
         with: 
           node-version: ${{matrix.node-version}}
-          cache: 'npm'
-      - run: npm ci
-      - run: npm lint
-      - run: npm build
+          cache: 'yarn'
+      - run: yarn install
+      - run: yarn lint
+      - run: yarn build
