feat: 更新 nextjs 所使用的 polyfill  列表

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,70 @@
 {
-  "extends": ["next", "plugin:compat/recommended"],
+  "extends": [
+    "next",
+    "plugin:compat/recommended"
+  ],
   "settings": {
     "polyfills": [
-      "fetch",
+      "array.copywith",
+      "array.fill",
+      "array.find",
+      "array.findIndex",
+      "array.flatMap",
+      "array.flat",
+      "array.includes",
+      "array.iterator",
+      "array.of",
+      "function.hasInstance",
+      "function.name",
+      "function.map",
+      "number.constructor",
+      "number.epsilon",
+      "number.isFinite",
+      "number.isNan",
+      "number.isSafeInteger",
+      "number.maxSafeInteger",
+      "number.minSafeInteger",
+      "number.parseFloat",
+      "number.parseInt",
+      "object.entries",
+      "object.getOwnPropertyDescriptors",
       "object.assign",
+      "object.keys",
+      "object.is",
+      "object.values",
+      "reflect",
+      "regexp",
+      "set",
+      "symbol",
+      "symbol.asyncIterator",
+      "string.codePointAt",
+      "symbol.description",
+      "string.endsWith",
+      "string.fromCodePoint",
+      "string.includes",
+      "string.iterator",
+      "string.pad-start",
+      "string.pad-end",
+      "string.raw",
+      "string.repeat",
+      "string.startsWith",
+      "string.trimLeft",
+      "string.trimRight",
       "string.trimStart",
       "string.trimEnd",
-      "symbol.description",
-      "array.flat",
-      "array.flatMap",
+      "url",
+      "url.to-json",
+      "url-searchParams",
+      "weak-map",
+      "weak-set",
+      "promise",
+      "promise.all-settled",
       "promise.finally",
+      "fetch",
       "process"
     ]
   },
-  "plugins": ["compat"]
+  "plugins": [
+    "compat"
+  ]
 }
