feat: 添加 public 快速引入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
       ],
       "@styles/*": [
         "./styles/*"
+      ],
+      "@public/*": [
+        "./public/*"
       ]
     },
     "outDir": ".next",
