feat: Update Polyfill usage list for eslint plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,61 +5,60 @@
   ],
   "settings": {
     "polyfills": [
-      "array.copywith",
-      "array.fill",
-      "array.find",
-      "array.findIndex",
-      "array.flatMap",
-      "array.flat",
-      "array.includes",
-      "array.iterator",
-      "array.of",
-      "function.hasInstance",
-      "function.name",
-      "function.map",
-      "number.constructor",
-      "number.epsilon",
-      "number.isFinite",
-      "number.isNan",
-      "number.isSafeInteger",
-      "number.maxSafeInteger",
-      "number.minSafeInteger",
-      "number.parseFloat",
-      "number.parseInt",
-      "object.entries",
-      "object.getOwnPropertyDescriptors",
-      "object.assign",
-      "object.keys",
-      "object.is",
-      "object.values",
+      "Array.prototype.copywith",
+      "Array.prototype.fill",
+      "Array.prototype.find",
+      "Array.prototype.findIndex",
+      "Array.prototype.flatMap",
+      "Array.prototype.flat",
+      "Array.prototype.includes",
+      "Array.prototype.iterator",
+      "Array.prototype.of",
+      "Function.hasInstance",
+      "Function.name",
+      "Function.map",
+      "Number.constructor",
+      "Number.prototype.epsilon",
+      "Number.prototype.isFinite",
+      "Number.prototype.isNan",
+      "Number.prototype.isSafeInteger",
+      "Number.prototype.maxSafeInteger",
+      "Number.prototype.minSafeInteger",
+      "Number.prototype.parseFloat",
+      "Number.prototype.parseInt",
+      "Object.prototype.entries",
+      "Object.prototype.getOwnPropertyDescriptors",
+      "Object.prototype.assign",
+      "Object.prototype.keys",
+      "Object.prototype.is",
+      "Object.prototype.values",
       "reflect",
       "regexp",
       "set",
-      "symbol",
-      "symbol.asyncIterator",
-      "string.codePointAt",
-      "symbol.description",
-      "string.endsWith",
-      "string.fromCodePoint",
-      "string.includes",
-      "string.iterator",
-      "string.pad-start",
-      "string.pad-end",
-      "string.raw",
-      "string.repeat",
-      "string.startsWith",
-      "string.trimLeft",
-      "string.trimRight",
-      "string.trimStart",
-      "string.trimEnd",
-      "url",
-      "url.to-json",
-      "url-searchParams",
-      "weak-map",
-      "weak-set",
-      "promise",
-      "promise.all-settled",
-      "promise.finally",
+      "Symobo.prototypeasyncIterator",
+      "Symobo.prototypedescription",
+      "String.prototypecodePointAt",
+      "String.prototypeendsWith",
+      "String.prototypefromCodePoint",
+      "String.prototypeincludes",
+      "String.prototypeiterator",
+      "String.prototypepad-start",
+      "String.prototypepad-end",
+      "String.prototyperaw",
+      "String.prototyperepeat",
+      "String.prototypestartsWith",
+      "String.prototypetrimLeft",
+      "String.prototypetrimRight",
+      "String.prototypetrimStart",
+      "String.prototypetrimEnd",
+      "URL",
+      "URL.prototype.to-json",
+      "URL.prototype.searchParams",
+      "WeakMap",
+      "WeakSet",
+      "Promise",
+      "Promise.allSettled",
+      "Promise.finally",
       "fetch",
       "process"
     ]
