--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@next/env": "12.3.4",
