--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "customStart": "set NODE_ENV=producticon node server.js",
     "preview": "node ./scripts/preview.js",
     "lint": "yarn style-lint && next lint",
     "style-lint": "stylelint \"./styles\"",
