--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "core-js": "3",
+    "i18next": "^23.11.5",
     "next": "12.3.4",
+    "next-i18next": "^15.3.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^14.1.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
