feat: i18n package babel fixiable

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "12.3.4",
     "eslint-plugin-compat": "^4.2.0",
+    "next-transpile-modules": "9.1.0",
     "nodemon": "^3.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^9.5.11",
