--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "core-js": "3",
+    "crypto-js": "^4.2.0",
     "i18next": "^23.11.5",
     "next": "12.3.4",
     "next-i18next": "^15.3.0",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@next/env": "12.3.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "20.12.8",
     "@types/react": "18.3.1",
     "eslint": "^8.57.0",
