feat: add temp next code

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "core-js": "3",
     "crypto-js": "^4.2.0",
     "i18next": "^23.11.5",
+    "jsrsasign": "^10.9.0",
+    "jsrsasign-util": "^1.0.5",
     "next": "12.3.4",
+    "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
     "patch-package": "^8.0.0",
     "postinstall-postinstall": "^2.1.0",
@@ -30,11 +33,14 @@
   "devDependencies": {
     "@next/env": "12.3.4",
     "@types/crypto-js": "^4.2.2",
+    "@types/jsrsasign": "^10.5.14",
     "@types/node": "20.12.8",
     "@types/react": "17.0.2",
+    "chai": "^5.1.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "12.3.4",
     "eslint-plugin-compat": "^4.2.0",
+    "mocha": "^10.4.0",
     "next-transpile-modules": "9.1.0",
     "nodemon": "^3.1.0",
     "postcss-flexbugs-fixes": "^5.0.2",
