--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@prisma/client": "^5.14.0",
-    "core-js": "3",
+    "core-js": "^3",
     "crypto-js": "^4.2.0",
+    "gsap": "^3.12.5",
     "i18next": "^23.11.5",
-    "jsrsasign": "^10.9.0",
-    "jsrsasign-util": "^1.0.5",
     "next": "12.3.4",
     "next-auth": "^4.24.7",
     "next-i18next": "^15.3.0",
