--- a/package.json
+++ b/package.json
@@ -49,5 +49,13 @@
     "stylelint": "^16.5.0",
     "stylelint-no-unsupported-browser-features": "^8.0.1",
     "typescript": "5.4.5"
+  },
+  "overrides": {
+    "@gsap/react": {
+      "react": "17.0.2"
+    }
+  },
+  "resolutions": {
+    "@gsap/react/react": "17.0.2"
   }
 }
